fix content overflow

--- a/stylesrc/home.styl
+++ b/stylesrc/home.styl
@@ -32,7 +32,7 @@ article
 
   .content
     width: 40rem
-    min-width: calc(100%-32px)
+    max-width: calc(100% - 32px)
 
     p
       text-align: center
